--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,41 @@
-*{
+* {
   box-sizing: border-box;
-  margin: 0 auto;
+}
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1000px;
+}
+.home_container {
+  display: flex;
+  justify-content: center;
 }
 .game__buttonContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
-.game__button {  
+.game__button {
   cursor: pointer;
 }
 
 .game__selection--image {
-  width: 50px;
+  width: 75px;
   transform: rotate(90deg);
 }
 
 .game__section {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  width: 50%;
   margin: 20px;
 }
 .pc__selection--image {
-  width: 100px;
+  width: 135px;
   transform: scaleX(-1) rotate(90deg);
 }
 .player__choices {
@@ -31,9 +43,48 @@
   flex-direction: column;
   gap: 25px;
 }
-.h1{
+.h1 {
+  font-size: 1.5rem;
+}
+.h2 {
   font-size: 1.25rem;
 }
-.h2{
+.h1__description {
+  font-size: 1.5rem;
+  text-align: center;
+  width: 70%;
+}
+
+
+.language__selection--container{
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 10px;
+}
+.language__button {
+  all: unset;
+  font-size: 0.75rem;
+}
+
+.nav__bar {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  background-color: rgb(245, 245, 245);
+}
+.nav__item {
+  all: unset;
+  padding: 10px;
+  background-color: rgb(230, 230, 230);
+  border-radius: 1px;
+  font-size: 1.15rem;
+  cursor: pointer;
+  transition: font-size 0.2s;
+}
+.nav__item.active {
+  text-decoration: underline;
+  font-weight: bold;
+  background-color: rgb(219, 252, 193);
   font-size: 1.25rem;
 }
