--- a/src/index.css
+++ b/src/index.css
@@ -117,9 +117,13 @@
 }
 .table__content-cell {
   vertical-align: middle;
-  text-align: left;
+  text-align: center;
   border: 1px solid rgb(110, 110, 110);
   text-indent: 8px;
+}
+.table__content-cell--middle {
+  font-weight: bold;
+  font-size: 1.15rem;
 }
 
 .modal {
