--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,22 @@
 .App {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 1000px;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
 }
 .home_container {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
+  margin: 20px;
+}
+.game__page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
 }
 .game__buttonContainer {
   display: flex;
